--- a/2-ClubPlugin/SeasonVI/app.rc
+++ b/2-ClubPlugin/SeasonVI/app.rc
@@ -52,8 +52,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1, 0, 0, 0
-PRODUCTVERSION 1, 0, 0, 0
+FILEVERSION 2, 0, 0, 0
+PRODUCTVERSION 2, 0, 0, 0
 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 FILEFLAGS 0x1L
@@ -70,12 +70,12 @@ BLOCK "040904b0"
 BEGIN
 VALUE "CompanyName", "www.muserver.club"
 VALUE "FileDescription", "www.muserver.club"
-VALUE "FileVersion", "1.0.0.0"
+VALUE "FileVersion", "2.0.0.0"
 VALUE "InternalName", "Custom Dll"
 VALUE "LegalCopyright", "Copyright (C) MuServer.Club 2022"
 VALUE "OriginalFilename", "Plugin.dll"
-VALUE "ProductName", "BiesekDev.com"
-VALUE "ProductVersion", "1.0.0.0"
+VALUE "ProductName", "www.wiesoo.com"
+VALUE "ProductVersion", "2.0.0.0"
 END
 END
 BLOCK "VarFileInfo"
