--- a/1-ServerClub/ServerPlugin.ini
+++ b/1-ServerClub/ServerPlugin.ini
@@ -6,9 +6,16 @@ ClientVersion = 1.00.00
 CheckCRC = 1
 HackSwitch = 1
 
-[DataServerInfo]
-CheckSQL = 0
-DataServerODBC = MuOnline
+[DataServerConfig]
+DS_1_Enabled = 1
+DS_2_Enabled = 1
+DS_1_Port = 55860
+DS_2_Port = 55760
+Ip_1_Address = 127.0.0.1
+Ip_1_Address = 127.0.0.1
+GS_1_Ports = 55900,55919
+GS_2_Ports = 55920,55939
+PortNumberAddress = 0x0
 
 [ConfigFuncKeys]
 Func1 = 25
