--- a/1-ServerClub/ServerPlugin.ini
+++ b/1-ServerClub/ServerPlugin.ini
@@ -1,18 +1,16 @@
 [ServerPluginInfo]
 LicenseId = 0
-ServerDllPort = 55998
+ServerPort = 55998
 ClientSerial = X-TeamDevelopers
 ClientVersion = 1.00.00
 CheckCRC = 1
-HackSwitch = 1
+HackSwitch = 0
 
 [DataServerConfig]
 DS_1_Enabled = 1
 DS_2_Enabled = 1
 DS_1_Port = 55860
 DS_2_Port = 55760
-Ip_1_Address = 127.0.0.1
-Ip_1_Address = 127.0.0.1
 GS_1_Ports = 55900,55919
 GS_2_Ports = 55920,55939
 PortNumberAddress = 0x0
@@ -39,6 +37,10 @@ Func16 = 27
 PetSafeZoneHorse = 0
 PetSafeZoneDinorant = 0
 PetSafeZoneFenrir = 0
+DownS6 = 0
+CustomFog = 0
+SmokeEffect = 0
+KeyEventTime = 82
 ActiveNameServer = 0
 Name1Server = Custom1Name
 Name2Server = Custom2Name
