--- a/1-ServerClub/ServerPlugin.ini
+++ b/1-ServerClub/ServerPlugin.ini
@@ -1,6 +1,7 @@
 [ServerPluginInfo]
 LicenseId = 0
 ServerPort = 55998
+ServerName = Server Club Hard
 ClientSerial = X-TeamDevelopers
 ClientVersion = 1.00.00
 CheckCRC = 1
