Added Clock Season 2

--- a/1-ServerClub/ServerPlugin.ini
+++ b/1-ServerClub/ServerPlugin.ini
@@ -34,6 +34,12 @@ Func14 = 9
 Func15 = 5
 Func16 = 27
 
+[WindowNameCustom]
+ActiveWindowName = 0
+ActiveWindowClock = 0
+ActiveWindowWebSite = 0
+WindowWebSite = www.muserver.club
+
 [ConfigCustomS6]
 PetSafeZoneHorse = 0
 PetSafeZoneDinorant = 0
